--- a/css/custom.css
+++ b/css/custom.css
@@ -11,82 +11,47 @@ body {
 
 body {
   padding-top: 56px;
+  padding-bottom: 60px; /* Altura del menú inferior */
 }
 
-@media (max-width: 991.98px) {
-  .offcanvas-collapse {
-    position: fixed;
-    top: 56px; /* Height of navbar */
-    bottom: 0;
-    left: 100%;
-    width: 100%;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    overflow-y: auto;
-    visibility: hidden;
-    background-color: #343a40;
-    transition: transform .3s ease-in-out, visibility .3s ease-in-out;
-  }
-  .offcanvas-collapse.open {
-    visibility: visible;
-    transform: translateX(-100%);
-  }
+/* Estilos personalizados para el menú */
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #212529;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.nav-scroller .nav {
-  color: rgba(255, 255, 255, .75);
+.bottom-nav .nav-item {
+  flex: 1;
+  text-align: center;
 }
 
-.nav-scroller .nav-link {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: .875rem;
-  color: #6c757d;
+.bottom-nav .nav-link {
+  color: white;
+  padding: 10px 0;
+  font-size: 14px;
 }
 
-.nav-scroller .nav-link:hover {
-  color: #007bff;
-}
-
-.nav-scroller .active {
-  font-weight: 500;
-  color: #343a40;
-}
-
-.bg-purple {
-  background-color: #6f42c1;
-}
-
-/* Oculta todas las vistas inicialmente */
-.view {
-  display: none;
-}
-
-/* Solo muestra la vista activa */
-.view.active {
-  display: block;
-}
-
-.clockpicker-popover {
-  position: absolute !important;
-}
-
-.clockpicker-tick {
-  color: black;
-}
-
-.bg-body-tertiary {
-  position: relative;
-}
-
-.visited {
-  background: #137813 !important;
-}
-
-.visited:not(.collapsed) {
-  color: #fff !important;
+.bottom-nav .nav-link:hover,
+.bottom-nav .nav-link.active {
+  color: #0d6efd;
 }
 
 .hidden {
   display: none;
+}
+
+.view {
+  display: none;
+}
+
+.view.active {
+  display: block;
+}
+
+.nav-link.active {
+  color: #007bff; /* Color azul por defecto, cámbialo según tu paleta de colores */
 }
